<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_device_1"
                android:layout_gravity="right|center"
                android:visibility="gone"
                android:layout_weight="1"
                android:checked="false"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device1"
                android:id="@+id/tv_1"
                android:layout_weight="4"
                android:layout_gravity="left|center_vertical"/>

        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tgbt_1"
                android:layout_gravity="right"
                android:textOff=""
                android:textOn=""
                android:layout_weight="1"
                android:background="@drawable/tb_selector"
                android:checked="false"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:visibility="gone"
                android:layout_weight="1"
                android:id="@+id/cb_device_2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device2"
                android:id="@+id/tv_2"
                android:layout_weight="4"
                android:layout_gravity="left|center_vertical"/>

        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff=""
                android:textOn=""
                android:layout_weight="1"
                android:background="@drawable/tb_selector"
                android:id="@+id/tgbt_2"
                android:layout_gravity="right"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:visibility="gone"
                android:layout_weight="1"
                android:id="@+id/cb_device_3"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device3"
                android:id="@+id/tv_3"
                android:layout_weight="4"
                android:layout_gravity="left|center_vertical"/>

        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff=""
                android:textOn=""
                android:layout_weight="1"
                android:background="@drawable/tb_selector"
                android:id="@+id/tgbt_3"
                android:layout_gravity="right"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:visibility="gone"
                android:id="@+id/cb_device_4"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device4"
                android:id="@+id/tv_4"
                android:layout_weight="4"
                android:layout_gravity="left|center_vertical"/>

        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/tb_selector"
                android:id="@+id/tgbt_4"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"/>
    </LinearLayout>
</LinearLayout>

